--- a/batch2/BK15/BK15_07_incEE_dist.ini
+++ b/batch2/BK15/BK15_07_incEE_dist.ini
@@ -2,16 +2,16 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_01_baseline_dist.ini
+# File: BK15_07_incEE_dist.ini
 # Date: 2018-09-21
 #
-# Baseline analysis as seen in Figure 4 of BICEP/Keck X.
-# First, generate chains by running cosmomc with BK15_01_baseline.ini
+# Alternate analysis shown as cyan curve in Figure 18 of BICEP/Keck X.
+# First, generate chains by running cosmomc with BK15_07_incEE.ini
 # Then, run getdist with this file to process chains.
 
-file_root = chains/BK15_01_baseline/BK15_baseline
-out_dir = dists/BK15_01_baseline
-plot_data_dir = dists/BK15_01_baseline
+file_root = chains/BK15_07_incEE/BK15_incEE
+out_dir = dists/BK15_07_incEE
+plot_data_dir = dists/BK15_07_incEE
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
