--- a/batch2/BK15/BK15_08_dc1pm5p_dist.ini
+++ b/batch2/BK15/BK15_08_dc1pm5p_dist.ini
@@ -2,25 +2,26 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_01_baseline_dist.ini
+# File: BK15_08_dc1pm5p_dist.ini
 # Date: 2018-09-21
 #
-# Baseline analysis as seen in Figure 4 of BICEP/Keck X.
-# First, generate chains by running cosmomc with BK15_01_baseline.ini
+# Alternate analysis shown as blue curve in Figure 21 of BICEP/Keck X.
+# First, generate chains by running cosmomc with BK15_08_dc1pm5p.ini
 # Then, run getdist with this file to process chains.
 
-file_root = chains/BK15_01_baseline/BK15_baseline
-out_dir = dists/BK15_01_baseline
-plot_data_dir = dists/BK15_01_baseline
+file_root = chains/BK15_08_dc1pm5p/BK15_dc1pm5p
+out_dir = dists/BK15_08_dc1pm5p
+plot_data_dir = dists/BK15_08_dc1pm5p
 chain_num = -1
 
 # Need to give limits if prior cuts off distribution where not very small
 limits[r] = 0 N
 limits[rBB] = 0 N
-limits[r02] = 0 N
-limits[r10] = 0 N
+limits[r02]= 0 N
+limits[r10]= 0 N
 limits[BBdust] = 0 10
 limits[BBsync] = 0 N
+limits[Delta_dust] = 0.2 1
 
 # if zero, columnnum calculated automatically as total number of columns
 columnnum  = 0
@@ -40,18 +41,15 @@ num_bins = 100
 num_bins_2D = 40
 
 # IMPORTANT NOTES REGARDING smooth_scale_1D:
-# BKPlanck: The choice of the smooth_scale_1D has impact on the likelihood 
-# of r for r->0 since the smoothing kernel is asked to smooth over the 
-# cut-off at r=0. This results in and artifical increase of the likelihood 
-# towards r=0. Choose a small smoothing scale to be closer to the underlying 
-# MCMC sample distribution:
+# BKPlanck: The choice of the smooth_scale_1D has impact on the likelihood of r for r->0
+# since the smoothing kernel is asked to smooth over the cut-off at r=0. This results in
+# and artifical increase of the likelihood towards r=0. Choose a small smoothing scale
+# to be closer to the underlying MCMC sample distribution:
 smooth_scale_1D = 0.15
 # if >= 1 smooth by smooth_scale_1D bin widths
-# if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations 
-#   in each parameter (around 0.2-0.3 is often good)
+# if > 0  and <1 smooth by Gaussian of smooth_scale_1D standard deviations in each parameter (around 0.2-0.3 is often good)
 # if < 0 uses automatic smoothing length (changes with parameter)
-# - the overall smoothing length is scaled by abs(smooth_scale_1D) from very 
-#   crude guess at best overall scale
+# -the overall smoothing length is scaled by abs(smooth_scale_1D) from very crude guess at best overall scale
 
 # For 2D this is the smoothing scale relative to the bin size
 smooth_scale_2D = 2
@@ -63,8 +61,8 @@ max_scatter_points = 2000
 B&W = F
 
 # version of MatLab you are using if plot_ext=m
-# matlab_version = 7
-# plot_ext = m
+#matlab_version = 7
+#plot_ext = m
 
 # To make e.g. 1D plots automatically uncomment this
 # finish_run_command= matlab < %ROOTNAME%.m
@@ -73,8 +71,7 @@ B&W = F
 no_plots = F
 no_tests = F
 auto_label = F
-# samples_are_chains = F can be useful for other samples when first two 
-# columns not present
+# samples_are_chains = F can be useful for other samples when first two columns not present
 samples_are_chains = T
 
 # Include these in 1D plots for comparison - must have same parameters
@@ -101,10 +98,9 @@ num_contours = 2
 contour1 = 0.68
 contour2 = 0.95
 
-# If the distribution is skewed, so two probability of tails differs by more 
-# than credible_interval_threshold of the peak value, use equal-probability 
-# limits rather than integrating inwards equally at both tails.
-# Note: credible interval depend on smoothing.
+# If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
+# of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
+# Note credible interval depend on smoothing
 credible_interval_threshold = 0.05
 
 # if we only want 2D plots agains a particular variable
@@ -117,20 +113,17 @@ plot1 = r BBdust
 
 # number of sample plots, colored by third parameter
 # if last parameter is 0 or -1 colored by the parameter most correlated
-# with one of the eigenvector directions (e.g. parallel or orthogonal to 
-# degeneracy)
+# with one of the eigenvector directions (e.g. parallel or orthogonal to degeneracy)
 num_3D_plots = 0
 
-# Output 2D plots for param combos with 1D marginalized plots along the 
-# diagonal
+# Output 2D plots for param combos with 1D marginalized plots along the diagonal
 triangle_plot = T
-triangle_params = r BBdust BBsync BBbetadust BBbetasync BBdustsynccorr BBalphadust BBalphasync
+triangle_params = r BBdust BBsync BBbetadust BBbetasync BBalphadust BBalphasync rho_dust
 # triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r H0 omegam omegal sigma8 r02
 
-# Parameters to use. If not specified use all parameters which have labels.
+# Parameters to use. If not specified use all parameters which have lables.
 # plot_params = omegabh2 omegach2 tau ns
-plot_params = r BBdust BBsync BBbetadust BBbetasync BBdustsynccorr BBalphadust
- BBalphasync
+plot_params = r BBdust BBsync BBbetadust BBbetasync BBalphadust BBalphasync rho_dust
 
 # compute two-tail marginalized limits irrespective of limits settings above
 # (otherwise limits are two-tail only for those parameters without limits)
