--- a/batch2/BK15/BK15_02_freebdust.ini
+++ b/batch2/BK15/BK15_02_freebdust.ini
@@ -2,17 +2,19 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_01_baseline.ini
+# File: BK15_02_freebdust.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the baseline analysis from Figure 4 of BICEP2/Keck X. For details of 
+# of the alternate analysis shown as the pink line on Figure 16 of 
+# BICEP2/Keck X. This likelihood differs from the baseline by relaxing the 
+# prior on parameter beta_dust (dust emmissivity spectral index). For details of 
 # the parameters in the baseline model, see BK15only.ini and BK15.ini, and 
 # comments therein.
 #
-# After generating chains, BK15_01_baseline_dist.ini can be used with 
+# After generating chains, BK15_02_freebdust_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
@@ -21,17 +23,22 @@ DEFAULT(batch2/BK15only.ini)
 DEFAULT(batch2/common.ini)
 
 # Root name for files produced
-file_root = BK15_baseline
+file_root = BK15_freebdust
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_01_baseline/
+root_dir = chains/BK15_02_freebdust/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
 
 # Convergence limits
-MPI_Converge_Stop = 0.0005
+MPI_Converge_Stop = 0.001
 MPI_Limit_Converge_Err = 0.1
 
 # Run chains.
 action = 0
+
+# dust SED power law index
+# relaxed prior is flat on range [1.04, 2.14]
+param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
+prior[BBbetadust] =
