--- a/batch2/BK15/BK15_10_dclin.ini
+++ b/batch2/BK15/BK15_10_dclin.ini
@@ -2,17 +2,20 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_01_baseline.ini
+# File: BK15_10_dclin.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the baseline analysis from Figure 4 of BICEP2/Keck X. For details of 
-# the parameters in the baseline model, see BK15only.ini and BK15.ini, and 
+# of the alternate analysis shown as the green line on Figure 21 of 
+# BICEP2/Keck X. This likelihood differs from the baseline because it allows
+# decorrelation of the dust signal with a uniform prior on parameter Delta_d,
+# limited to the range [0.2,1], and linear scaling with ell. For details of the 
+# parameters in the baseline model, see BK15only.ini and BK15.ini, and 
 # comments therein.
 #
-# After generating chains, BK15_01_baseline_dist.ini can be used with 
+# After generating chains, BK15_10_dclin_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
@@ -21,17 +24,27 @@ DEFAULT(batch2/BK15only.ini)
 DEFAULT(batch2/common.ini)
 
 # Root name for files produced
-file_root = BK15_baseline
+file_root = BK15_dclin
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_01_baseline/
+root_dir = chains/BK15_10_dclin/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
 
 # Convergence limits
-MPI_Converge_Stop = 0.0005
+MPI_Converge_Stop = 0.001
 MPI_Limit_Converge_Err = 0.1
 
 # Run chains.
 action = 0
+
+# correlation between dust and sync
+param[BBdustsynccorr] = 0
+
+# setting the ell scaling of fg decorr
+cmb_dataset[BKPLANCK,lform_dust_decorr] = lin
+
+# setting the limits and priors for fg decorr
+param[Delta_dust] = 1.0 0.2 1 0.02 0.02
+prior[Delta_dust] = 
