add DES to test.ini

--- a/test.ini
+++ b/test.ini
@@ -2,6 +2,9 @@
 #Bicep-Keck-Planck 2014, varying cosmological parameters
 DEFAULT(batch3/BK14.ini)
 
+#DES 1Yr
+DEFAULT(batch3/DES.ini)
+
 #Planck 2015, default just include native likelihoods (others require clik)
 #DEFAULT(batch2/plik_dx11dr2_HM_v18_TT.ini)
 #DEFAULT(batch2/lowTEB.ini)
@@ -36,7 +39,7 @@ file_root=test
 action = 4
 
 #expected result for -(log like)
-test_check_compare = 330.392
+test_check_compare = 616.729
 
 num_threads = 0
 
