--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,6 @@
 #general settings
 #Bicep-Keck-Planck 2014, varying cosmological parameters
-DEFAULT(batch3/BK14.ini)
+#DEFAULT(batch3/BK14.ini)
 
 #DES 1Yr
 DEFAULT(batch3/DES.ini)
