update test compare number

--- a/test_planck.ini
+++ b/test_planck.ini
@@ -12,5 +12,7 @@ DEFAULT(test.ini)
 #Uncomment if you want to include priors even when parameters fixed
 #include_fixed_parameter_priors = T
 
-#expected result for -(log like)  [note different from master, but C_L very similar]
-test_check_compare = 6346.664
+#expected result for -(log like)
+#Note: different from master, but C_L very similar (much less than 0.1% difference);
+#away from best fit small delta-CL can make big difference
+test_check_compare = 6347.431
