--- a/batch3/BK15/BK15_04_nowmap.ini
+++ b/batch3/BK15/BK15_04_nowmap.ini
@@ -2,34 +2,36 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_02_freebdust.ini
+# File: BK15_04_nowmap.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the alternate analysis shown as the pink line on Figure 16 of 
-# BICEP2/Keck X. This likelihood differs from the baseline by relaxing the 
-# prior on parameter beta_dust (dust emmissivity spectral index). For details of 
-# the parameters in the baseline model, see BK15only.ini and BK15.ini, and 
-# comments therein.
+# of the alternate analysis shown as the lavender line on Figure 18 of 
+# BICEP2/Keck X. This likelihood differs from the baseline because it does not
+# include data from the WMAP 23 and 33 GHz maps (but still includes Planck 
+# LFI and HFI data). For details of the parameters in the baseline model, see 
+# BK15only.ini and BK15.ini, and comments therein.
 #
-# After generating chains, BK15_02_freebdust_dist.ini can be used with 
+# After generating chains, BK15_04_nowmap_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BK15only.ini)
+DEFAULT(batch3/BK15only.ini)
 # General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(batch3/common.ini)
 
 # Root name for files produced
-file_root = BK15_freebdust
+file_root = BK15_nowmap
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_02_freebdust/
+root_dir = chains/BK15_04_nowmap/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
+
+cmb_dataset[BKPLANCK,maps_use] = BK15_95_B BK15_150_B BK15_220_B P030_B P044_B P070_B P100_B P143_B P217_B P353_B
 
 # Convergence limits
 MPI_Converge_Stop = 0.001
@@ -37,8 +39,3 @@ MPI_Limit_Converge_Err = 0.1
 
 # Run chains.
 action = 0
-
-# dust SED power law index
-# relaxed prior is flat on range [1.04, 2.14]
-param[BBbetadust] = 1.59 1.04 2.14 0.02 0.02
-prior[BBbetadust] =
