--- a/batch3/BK15/BK15_05_nolfi.ini
+++ b/batch3/BK15/BK15_05_nolfi.ini
@@ -2,35 +2,39 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_01_baseline.ini
+# File: BK15_05_nolfi.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the baseline analysis from Figure 4 of BICEP2/Keck X. For details of 
-# the parameters in the baseline model, see BK15only.ini and BK15.ini, and 
-# comments therein.
+# of the alternate analysis shown as the orange line on Figure 18 of 
+# BICEP2/Keck X. This likelihood differs from the baseline because it does not
+# include data from Planck LFI maps (but still includes Planck HFI and
+# WMAP 23 and 33 GHz). For details of the parameters in the baseline model, 
+# see BK15only.ini and BK15.ini, and comments therein.
 #
-# After generating chains, BK15_01_baseline_dist.ini can be used with 
+# After generating chains, BK15_05_nolfi_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BK15only.ini)
+DEFAULT(batch3/BK15only.ini)
 # General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(batch3/common.ini)
 
 # Root name for files produced
-file_root = BK15_baseline
+file_root = BK15_nolfi
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_01_baseline/
+root_dir = chains/BK15_05_nolfi/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
 
+cmb_dataset[BKPLANCK,maps_use] = BK15_95_B BK15_150_B BK15_220_B W023_B W033_B P100_B P143_B P217_B P353_B
+
 # Convergence limits
-MPI_Converge_Stop = 0.0005
+MPI_Converge_Stop = 0.001
 MPI_Limit_Converge_Err = 0.1
 
 # Run chains.
