--- a/batch3/BK15/BK15_06_bkonly.ini
+++ b/batch3/BK15/BK15_06_bkonly.ini
@@ -2,34 +2,35 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_03_freebsync.ini
+# File: BK15_06_bkonly.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the alternate analysis shown as the green line on Figure 16 of 
-# BICEP2/Keck X. This likelihood differs from the baseline by relaxing the 
-# prior on parameter beta_sync (synchrotron SED spectral index). For details of 
-# the parameters in the baseline model, see BK15only.ini and BK15.ini, and 
-# comments therein.
+# of the alternate analysis shown as the pink line on Figure 18 of 
+# BICEP2/Keck X. This likelihood differs from the baseline because it does not
+# include data from Planck (LFI or HFI) or WMAP. For details of the parameters 
+# in the baseline model, see BK15only.ini and BK15.ini, and comments therein.
 #
-# After generating chains, BK15_03_freebsync_dist.ini can be used with 
+# After generating chains, BK15_06_bkonly_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BK15only.ini)
+DEFAULT(batch3/BK15only.ini)
 # General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(batch3/common.ini)
 
 # Root name for files produced
-file_root = BK15_freebsync
+file_root = BK15_bkonly
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_03_freebsync/
+root_dir = chains/BK15_06_bkonly/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
+
+cmb_dataset[BKPLANCK,maps_use] = BK15_95_B BK15_150_B BK15_220_B 
 
 # Convergence limits
 MPI_Converge_Stop = 0.001
@@ -37,8 +38,3 @@ MPI_Limit_Converge_Err = 0.1
 
 # Run chains.
 action = 0
-
-# sync SED power law index
-# relaxed prior is flat on range [-4.5, -2.0]
-param[BBbetasync] = -3.1 -4.5 -2.0 0.02 0.02
-prior[BBbetasync] =
