--- a/batch3/BK15/BK15_10_dclin.ini
+++ b/batch3/BK15/BK15_10_dclin.ini
@@ -2,31 +2,32 @@
 # BICEP2/Keck Array X: Constraints On Primordial Gravitational Waves using Planck, WMAP, and New BICEP2/Keck Observations through the 2015 Season
 # http://bicepkeck.org/
 #
-# File: BK15_08_dc1pm5p.ini
+# File: BK15_10_dclin.ini
 # Date: 2018-09-21
 #
 # BICEP2/Keck Array likelihood, including external data from Planck and WMAP.
 #
 # This file contains input parameters to CosmoMC to reproduce the likelihoods 
-# of the alternate analysis shown as the blue line on Figure 21 of 
+# of the alternate analysis shown as the green line on Figure 21 of 
 # BICEP2/Keck X. This likelihood differs from the baseline because it allows
-# decorrelation of the dust signal with a prior of 1+-0.05 on parameter Delta_d
-# and linear scaling with ell. For details of the parameters in the baseline 
-# model, see BK15only.ini and BK15.ini, and comments therein.
+# decorrelation of the dust signal with a uniform prior on parameter Delta_d,
+# limited to the range [0.2,1], and linear scaling with ell. For details of the 
+# parameters in the baseline model, see BK15only.ini and BK15.ini, and 
+# comments therein.
 #
-# After generating chains, BK15_08_dc1pm5p_dist.ini can be used with 
+# After generating chains, BK15_10_dclin_dist.ini can be used with 
 # getdist to produce plots of marginalized posteriors.
 
 # BK15 foreground and data selection settings for the fiducial analysis
-DEFAULT(batch2/BK15only.ini)
+DEFAULT(batch3/BK15only.ini)
 # General settings
-DEFAULT(batch2/common.ini)
+DEFAULT(batch3/common.ini)
 
 # Root name for files produced
-file_root = BK15_dc1pm5p
+file_root = BK15_dclin
 
 # Folder where files (chains, checkpoints, etc.) are stored
-root_dir = chains/BK15_08_dc1pm5p/
+root_dir = chains/BK15_10_dclin/
 
 # From baseline analysis run
 propose_matrix = planck_covmats/BK15.covmat
@@ -38,12 +39,12 @@ MPI_Limit_Converge_Err = 0.1
 # Run chains.
 action = 0
 
-# turn off dust-sync correlation
+# correlation between dust and sync
 param[BBdustsynccorr] = 0
 
-# setting the ell scaling of dust decorrelation
+# setting the ell scaling of fg decorr
 cmb_dataset[BKPLANCK,lform_dust_decorr] = lin
 
-# setting the limits and priors for dust decorrelation
-param[Delta_dust] = 1 0.2 1 0.02 0.02
-prior[Delta_dust] = 1 0.05
+# setting the limits and priors for fg decorr
+param[Delta_dust] = 1.0 0.2 1 0.02 0.02
+prior[Delta_dust] = 
