Added line in BK15only.ini to set up param[r] in analysis.

--- a/batch3/BK15only.ini
+++ b/batch3/BK15only.ini
@@ -39,3 +39,6 @@ param[yhe] = 0.2476949
 param[ns] = 0.9619123
 param[theta] = 1.0411
 param[logA] = 3.1
+
+# Constrain r in baseline analysis.
+param[r] = 0.06 0.0 0.5 0.04 0.04
