BK15 data release (#13)
* Added code for dust and/or sync decorrelation in CMB_BK_Planck.f90

Updated BK14.ini and BKPlanck.ini so that decorrelation will be turned
off by default (correlation parameter fixed to 1).
Added dust and sync correlation parameters to BK14.paramnames and
BKPlanck.paramnames

* Removed a couple of print statements that were used for debugging.

* Fixed foreground decorrelation calculation to use proper pairs of
pivot frequencies for dust and sync.

* Fixed functional form of foreground decorrelation

* Fixed symmetrized rho > 1 branch of decorrelation remap function.

*  added ini file for testing purposes

* more prints

* more prints

* no modif

* more prints, action=2

* more prints

*  added ini file for testing purposes

* more prints

* more prints

* no modif

* more prints, action=2

* more prints

* final bugged version

* debugged

* final changes, deleted prints

* deleted useless files

* local changes

* comment fix

* modif .gitignore

* modif .gitignore

* added sim files in data/BK15_simd

* modified test file batch2/test_bc.ini

* Took BK15* out of .gitignore!

* Added BK15 dataset

* Added .ini files needed to reproduce BK15 baseline analysis

* Added BK15.covmat and updated BK15_01 ini file to use it as a proposal matrix

* Fixed a bug in decorrelation that I introduced with my previous merge

* Labeled BK15 likelihood as fast

* Removed some voluminous print statements

* Only calculate dust or sync decorrelation if necessary

* Cleaned up CMB_BK_Planck likelihood module.

Renamed decorrelation parameters to match equations in paper.
Expanded calculation of bandcenter errors to make it more readable.

* Updated BKPlanck and BK14 for compatibility with the BK15 likelihood module.

* Updated BK15 file headers and decorrelation variable names.

* Added CosmoMC and GetDist ini files for BK15 analysis and variants

* Removed BK15_simd data

--- a/batch2/BK14.ini
+++ b/batch2/BK14.ini
@@ -18,6 +18,11 @@
 #   * Most foreground parameters are allowed to vary, with exception of the EE/BB
 #     ratios for dust and synchrotron (not used for B-modes only analysis) and 
 #     dust blackbody temperature, which the data are insensitive to.
+#
+# 2017-09-14 update: Added Delta_dust and Delta_sync parameters (fixed to 1 by 
+#                    default) for compatibility with BK15 likelihood module.
+# 2018-08-30 update: Added band center error (gamma) parameters (fixed to 0 by
+#                    default) for compatibility with BK15 likelihood module.
 
 # BK14 dataset, including Planck and WMAP
 cmb_dataset[BKPLANCK]=%DATASETDIR%BK14/BK14_dust.dataset
@@ -53,6 +58,17 @@ param[EEtoBB_dust] = 2
 param[EEtoBB_sync] = 2
 # dust blackbody temperature [K] -- fixed / very insensitive to this
 param[BBTdust] = 19.6
+# dust correlation ratio between 217 and 353 GHz, ell=80
+param[Delta_dust] = 1.0
+# sync correlation ratio between 23 and 33 GHz, ell=80
+param[Delta_sync] = 1.0
+# Band center errors, fixed to zero
+param[gamma_corr] = 0.0
+param[gamma_95] = 0.0
+param[gamma_150] = 0.0
+param[gamma_220] = 0.0
+# Note that gamma_220 parameter doesn't do anything for BK14, because
+# there is no 220 GHz channel!
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
