--- a/batch2/BKPlanck.ini
+++ b/batch2/BKPlanck.ini
@@ -24,6 +24,11 @@
 #
 # Note: See BKPlanckonly.ini and notes therein to reproduce the 
 #       "fiducial analysis" and variations thereof
+#
+# 2017-09-14 update: Added Delta_dust and Delta_sync parameters (fixed to 1 by 
+#                    default) for compatibility with BK15 likelihood module.
+# 2018-08-30 update: Added band center error (gamma) parameters (fixed to 0 by
+#                    default) for compatibility with BK15 likelihood module.
 
 # Default Planck data split = detector set
 cmb_dataset[BKPLANCK]=%DATASETDIR%BKPlanck/BKPlanck_detset_comb_dust.dataset
@@ -60,6 +65,17 @@ param[BBdustsynccorr] = 0.0
 # EE/BB ratios
 param[EEtoBB_dust] = 2
 param[EEtoBB_sync] = 1
+# dust correlation ratio between 217 and 353 GHz, ell=80
+param[Delta_dust] = 1.0
+# sync correlation ratio between 23 and 33 GHz, ell=80
+param[Delta_sync] = 1.0
+# Band center errors, fixed to zero
+param[gamma_corr] = 0.0
+param[gamma_95] = 0.0
+param[gamma_150] = 0.0
+param[gamma_220] = 0.0
+# Note that gamma_95 and gamma_220 parameters don't do anything for BKP, 
+# because there are no 95 GHz or 220 GHz channels!
 
 # Gaussian prior on BBbetadust: center value = 1.59, width = 0.11
 prior[BBbetadust] = 1.59 0.11
