--- a/test.ini
+++ b/test.ini
@@ -1,11 +1,7 @@
-#general settings
-#Bicep-Keck-Planck 2014, varying cosmological parameters
-DEFAULT(batch3/BK14.ini)
+#general settings, test file without require Planck likelihood code to be installed.
 
-#Planck 2015, default just include native likelihoods (others require clik)
-#DEFAULT(batch2/plik_dx11dr2_HM_v18_TT.ini)
-#DEFAULT(batch2/lowTEB.ini)
-#DEFAULT(batch2/lowl.ini)
+#Bicep-Keck-Planck 2015, varying cosmological parameters
+DEFAULT(batch3/BK15.ini)
 
 #Planck 2018 
 DEFAULT(batch3/lensing.ini)
