update version/,ini files

--- a/test.ini
+++ b/test.ini
@@ -1,13 +1,21 @@
 #general settings, test file without require Planck likelihood code to be installed.
+#see test_planck.ini for test file including Planck clik likelihoods
 
-#Bicep-Keck-Planck 2015, varying cosmological parameters
+#Bicep-Keck-Planck 2015, varying cosmological parameters (use only if varying r)
 DEFAULT(batch3/BK15.ini)
 
-#Planck 2018 
+#DES 1-yr joint
+DEFAULT(batch3/DES.ini)
+
+#Planck 2018 lensing (native code, does not require Planck likelihood code)
 DEFAULT(batch3/lensing.ini)
 
-#Other Likelihoods
-#DEFAULT(batch3/BAO.ini)
+#BAO compilation
+DEFAULT(batch3/BAO.ini)
+
+#Pantheon SN
+DEFAULT(batch3/Pantheon18.ini)
+
 
 #general settings
 DEFAULT(batch3/common.ini)
@@ -17,10 +25,10 @@ DEFAULT(batch3/common.ini)
 #compute_tensors = T
 #param[r] = 0.03 0 2 0.04 0.04
 
-#high for new runs
+#high for new runs, to start learning new proposal matrix quickly
 MPI_Max_R_ProposeUpdate = 30
 
-propose_matrix= planck_covmats/base_TT_lowTEB_plik.covmat
+propose_matrix= planck_covmats/base_TT_lensing_lowE_lowl_plikHM.covmat
 
 #Folder where files (chains, checkpoints, etc.) are stored
 root_dir = chains/
@@ -34,6 +42,7 @@ action = 4
 #expected result for -(log like)
 test_check_compare = 377.471 
 
+#Don't need to set this if OMP_NUM_THREADS set appropriately
 num_threads = 0
 
 #if you want to get theory cl for test point
@@ -43,6 +52,7 @@ start_at_bestfit =F
 feedback=1
 use_fast_slow = T
 
+#turn on checkpoint for real runs where you want to be able to continue them
 checkpoint = F
 
 #sampling_method=7 is a new fast-slow scheme good for Planck
@@ -57,9 +67,10 @@ indep_sample=10
 get_sigma8=T
 
 #Uncomment this if you don't want one 0.06eV neutrino by default
-#num_massive_neutrinos=
+#neutrino_hierarchy = degenerate
+#num_massive_neutrinos= 3
 #to vary parameters set param[name]= center, min, max, start width, propose width
-#param[mnu] = 0 0 0 0 0
+#param[mnu] = 0.06 0 5 0.05 0.05
 
 
 #for PICO install from https://pypi.python.org/pypi/pypico and download data file
