--- a/test_planck.ini
+++ b/test_planck.ini
@@ -1,22 +1,24 @@
 #Check that the Planck likelihood files run OK, see readme_planck.html to set up
 #Planck 2018, default just include native likelihoods (others require clik)
+
+#high-L plik likelihood
 DEFAULT(batch3/plik_rd12_HM_v22_TTTEEE.ini)
+
+#low-L temperature
 DEFAULT(batch3/lowl.ini)
 
+#low-L EE polarization
 DEFAULT(batch3/simall_EE.ini)
 
-#BAO compilation
-DEFAULT(batch3/BAO.ini)
-
-#Other settings same as test.ini
+#Other settings same as test.ini (also includes BK15, BAO, lensing..)
 DEFAULT(test.ini)
 
 #Uncomment if you want to include priors even when parameters fixed
 #include_fixed_parameter_priors = T
 
 #expected result for -(log like)
-
-#Note: different from master, but C_L very similar (much less than 0.1% difference);
-#away from best fit small delta-CL can make big difference
-test_check_compare =  1820.775
+#Note: different from Planck 2018 branch/published chains, but C_L very similar
+#(much less than 0.1% difference on small cales)
+# away from best fit small delta-CL can make big difference to chi-squared
+test_check_compare =  1821.458
 
