--- a/test_planck.ini
+++ b/test_planck.ini
@@ -20,5 +20,7 @@ DEFAULT(test.ini)
 #Note: different from Planck 2018 branch/published chains, but C_L very similar
 #(much less than 0.1% difference on small cales)
 # away from best fit small delta-CL can make big difference to chi-squared
-test_check_compare =  1821.458
+test_check_compare =  2625.485 
 
+#if you edit this to run chains (action=0) then also want good proposal matrix
+propose_matrix= planck_covmats/base_TTTTEEE_lensing_lowE_lowl_plikHM.covmat
