make clean also cleans camb

--- a/source/Makefile
+++ b/source/Makefile
@@ -304,6 +304,8 @@ cosmomc_debug: directories camb $(OBJFILES)
 
 clean: cleancosmomc
 	cd ../camb/forutils; make clean
+	cd ../camb/fortran; make clean
+
 
 cleancosmomc:
 	rm -f $(OUTPUT_DIR)/*.o $(OUTPUT_DIR)/*.mod ../core
