--- a/test.ini
+++ b/test.ini
@@ -2,7 +2,7 @@
 #see test_planck.ini for test file including Planck clik likelihoods
 
 #Bicep-Keck-Planck 2015, varying cosmological parameters (use only if varying r)
-DEFAULT(batch3/BK15.ini)
+#DEFAULT(batch3/BK15.ini)
 
 #DES 1-yr joint
 DEFAULT(batch3/DES.ini)
