--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+
 os: linux
 language: shell
 
 git:
   depth: false
 
-dist: bionic
+dist: focal
 
 services:
   - docker
@@ -14,12 +15,12 @@ jobs:
     - name: "GCC6"
       env:
         - GCCTAG="gcc6"
-    - name: "GCC8"
-      env:
-        - GCCTAG="gcc8"
     - name: "GCC9"
       env:
         - GCCTAG="gcc9"
+    - name: "GCC10"
+      env:
+        - GCCTAG="gcc10"
     - name: "GCC-trunk"
       env:
         - GCCTAG="devel"
